Load more results after scroll to end ok

--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,1 +1,6 @@
 <button (click)="getMovies()">fetch</button>
+<ul id="movieList">
+  <li *ngFor="let movie of movies">
+    <div style="height: 300px; border: 1px solid black;">{{ movie.Title }}</div>
+  </li>
+</ul>
