movie detail routing ok

--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -23,7 +23,9 @@
         </div>
 
         <div class="card-footer text-muted text-center">
-          <button class="btn btn-primary">Go Detail</button>
+          <button (click)="goDetail(movie.imdbID)" class="btn btn-primary">
+            Go Detail
+          </button>
         </div>
       </div>
     </div>
