movie detail ui ok

--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -1,1 +1,38 @@
-<p>movie-detail works!</p>
+<div class="movieDetailContainer container mt-5">
+  <ul>
+    <li><strong>Title:</strong> {{ movie.Title }}</li>
+    <li><strong>Year:</strong> {{ movie.Year }}</li>
+    <li><strong>Rated:</strong> {{ movie.Rated }}</li>
+    <li><strong>Released:</strong> {{ movie.Released }}</li>
+    <li><strong>Runtime:</strong> {{ movie.Runtime }}</li>
+    <li><strong>Genre:</strong> {{ movie.Genre }}</li>
+    <li><strong>Director:</strong> {{ movie.Director }}</li>
+    <li><strong>Writer:</strong> {{ movie.Writer }}</li>
+    <li><strong>Actors:</strong> {{ movie.Actors }}</li>
+    <li><strong>Plot:</strong> {{ movie.Plot }}</li>
+    <li><strong>Language:</strong> {{ movie.Language }}</li>
+    <li><strong>Country:</strong> {{ movie.Country }}</li>
+    <li><strong>Awards:</strong> {{ movie.Awards }}</li>
+    <li>
+      <strong>Ratings:</strong>
+      <ul>
+        <li *ngFor="let rating of movie.Ratings">
+          <strong>{{ rating.Source }}:</strong> {{ rating.Value }}
+        </li>
+      </ul>
+    </li>
+    <li><strong>Metascore:</strong> {{ movie.Metascore }}</li>
+    <li><strong>imdbRating:</strong> {{ movie.imdbRating }}</li>
+    <li><strong>imdbVotes:</strong> {{ movie.imdbVotes }}</li>
+    <li><strong>imdbID:</strong> {{ movie.imdbID }}</li>
+    <li><strong>Type:</strong> {{ movie.Type }}</li>
+    <li><strong>DVD:</strong> {{ movie.DVD }}</li>
+    <li><strong>BoxOffice:</strong> {{ movie.BoxOffice }}</li>
+    <li><strong>Production:</strong> {{ movie.Production }}</li>
+    <li>
+      <strong>Website: </strong
+      ><a href="{{ movie.Website }}">{{ movie.Website }}</a>
+    </li>
+  </ul>
+  <img [src]="movie.Poster" />
+</div>
