movies stored in service

--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,7 +1,7 @@
 <div id="movieList" class="container mt-5">
   <div class="row" style="justify-content: center;align-self: center;">
     <div
-      *ngFor="let movie of movies"
+      *ngFor="let movie of movieList"
       class="mb-4"
       style="width: 200px; margin: 14px"
     >
