--- a/src/app/movie-detail/movie-detail.component.css
+++ b/src/app/movie-detail/movie-detail.component.css
@@ -1,7 +1,21 @@
 .movieDetailContainer {
   display: flex;
+  overflow-x: hidden;
 }
 img {
   height: 550px;
   margin-left: 30px;
+}
+.error {
+  text-align: center;
+  color: red;
+}
+.loading {
+  text-align: center;
+  width: 100%;
+}
+@media screen and (max-width: 800px) {
+  img {
+    display: none;
+  }
 }
