--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -1,4 +1,5 @@
 <div class="movieDetailContainer container mt-5">
+  <h1 *ngIf="error" class="error">{{ error.message }}</h1>
   <ng-container *ngIf="movie; else elseTemplate">
     <ul>
       <li><strong>Title:</strong> {{ movie.Title }}</li>
@@ -38,6 +39,6 @@
     <img [src]="movie.Poster" />
   </ng-container>
   <ng-template #elseTemplate>
-    Loading
+    <h1 class="loading" *ngIf="!error">Loading...</h1>
   </ng-template>
 </div>
