--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,33 +1,37 @@
 <div id="movieList" class="container mt-5">
-  <div class="row" style="justify-content: center;align-self: center;">
-    <div
-      *ngFor="let movie of movieList"
-      class="mb-4"
-      style="width: 200px; margin: 14px"
-    >
-      <div class="card">
-        <h3
-          class="card-header text-center"
-          style="height: 130px; overflow: hidden; justify-content: center;align-items: center; display: flex;"
-        >
-          {{ movie.Title }}
-        </h3>
+  <h1 *ngIf="error" class="error">{{ error.message }}</h1>
+  <ng-container *ngIf="movieList; else elseTemplate">
+    <div class="row" style="justify-content: center;align-self: center;">
+      <div
+        *ngFor="let movie of movieList"
+        class="mb-4"
+        style="width: 200px; margin: 14px"
+      >
+        <div class="card">
+          <h3
+            class="card-header text-center"
+            style="height: 130px; overflow: hidden; justify-content: center;align-items: center; display: flex;"
+          >
+            {{ movie.Title }}
+          </h3>
 
-        <img
-          style="height: 200px; width: 100%; display: block;"
-          src="{{ movie.Poster }}"
-          alt="Card image"
-        />
-        <div class="card-body text-center">
-          <p class="card-text">Year : {{ movie.Year }}<br /></p>
-        </div>
+          <img
+            style="height: 200px; width: 100%; display: block;"
+            src="{{ movie.Poster }}"
+            alt="Card image"
+          />
+          <div class="card-body text-center">
+            <p class="card-text">Year : {{ movie.Year }}<br /></p>
+          </div>
 
-        <div class="card-footer text-muted text-center">
-          <button (click)="goDetail(movie.imdbID)" class="btn btn-primary">
-            Go Detail
-          </button>
+          <div class="card-footer text-muted text-center">
+            <button (click)="goDetail(movie.imdbID)" class="btn btn-primary">
+              Go Detail
+            </button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+    <h1 class="loading" *ngIf="!load">Loading...</h1>
+  </ng-container>
 </div>
